src/test/deca/context/invalid/added/greater_types.deca
// Doit lever une exception de vérification contextuelle

{
    if (4 < "hello"){
        print("KO");
    }
}